Demos in Tests verlagert und mit Logging versehen